[project]
name = "baker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.28.1",
    "instructlab>=0.23.1",
    "ipython>=8.32.0",
    "requests>=2.32.3",
    "vllm>=0.7.0",
    "wikipedia>=1.4.0",
]
